<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="titulo">Asteroides</string>
    <string name="Arrancar">Jugar</string>
    <string name="Configurar">Configurar</string>
    <string name="Acercade">Acerca de </string>
    <string name="Salir">Salir</string>
    <string name="hello">Hello World, Asteroides! </string>
    <string name="app_name">Asteroides</string>

</resources>